--- a/ContactManagement.Api/Properties/launchSettings.json
+++ b/ContactManagement.Api/Properties/launchSettings.json
@@ -9,22 +9,12 @@
     }
   },
   "profiles": {
-    "http": {
+    "ContactManagement.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5252",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7143;http://localhost:5252",
+      "applicationUrl": "https://localhost:6251;http://localhost:6250",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
