--- a/ContactManagement.BlazorShared/ContactManagement.BlazorShared.csproj
+++ b/ContactManagement.BlazorShared/ContactManagement.BlazorShared.csproj
@@ -7,16 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastEndpoints" Version="5.17.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\ContactManagement.Core\ContactManagement.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\ContactModels\Delete\" />
     <Folder Include="Models\ContactModels\Update\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.7.1" />
   </ItemGroup>
 
 </Project>
